<resources>
    <string name="app_name">Plan Assistant</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic29uZ3RpYW5sdW4iLCJhIjoiY2p2bDFnMnptMGtoNjRicGkwdm8zcWcxaiJ9.xsbaOoC2MRNNVpKG_g9iCQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PlanAssistant User</string>
    <string name="nav_header_subtitle">Welcome, i wish you a happy use.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_feedback">FeedBack</string>
    <string name="menu_home_task_all">全部任务</string>
    <string name="menu_home_task_today">今日任务</string>
    <string name="menu_home_task_today_planning">今日任务一键规划</string>
    <string name="menu_home_task_late">已延误任务</string>
    <string name="menu_home_task_undo">未完成任务</string>
    <string name="menu_home_task_do">已完成任务</string>
    <string name="menu_home_task_urgent_importance">重要且紧急任务</string>
    <string name="menu_home_task_noturgent_importance">重要但不紧急任务</string>
    <string name="menu_home_task_urgent_unimportance">不重要但紧急任务</string>
    <string name="menu_home_task_noturgent_unimportance">不重要也不紧急任务</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_task_location_checkout">确认</string>
    <string name="menu_task_location_detail_navi">前往</string>
    <string name="tab_title_main_1">Home</string>
    <string name="tab_title_main_2">Task</string>
    <string name="tab_title_main_3">Energy</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>
    <string name="title_activity_indoor">三维支持</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_personinfo_user">用户信息</string>
    <string name="title_activity_track">轨迹记录</string>
    <string name="title_activity_liveline">精力曲线</string>
    <string name="title_activity_mymap">个人地图</string>
    <string name="title_activity_plan">日程规划</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="share_with">Share with</string>
    <string name="main_card_title">StartActivity</string>
    <string name="card_home_location_title">位置记录</string>
    <string name="card_home_location_station">已关闭</string>
    <string name="card_home_location_station_title">状态</string>
    <string name="card_home_location_station_location">定位状态</string>
    <string name="card_home_location_length">×××个</string>
    <string name="card_home_location_data_title">6小时数据</string>
    <string name="card_home_location_quantity">××××</string>
    <string name="card_home_location_quantity_title">数量</string>
    <string name="card_home_location_date">××××年××月××日</string>
    <string name="card_home_task_statistics_title">日程统计</string>
    <string name="card_home_task_statistics_today">***</string>
    <string name="card_home_task_statistics_today_title">今日任务</string>
    <string name="card_home_task_statistics_do">***</string>
    <string name="card_home_task_statistics_do_title">今日完成</string>
    <string name="card_home_task_statistics_undo">***</string>
    <string name="card_home_task_statistics_undo_title">总待完成</string>
    <string name="card_home_bookkeeping_statistics_title">记账本</string>
    <string name="card_home_bookkeeping_statistics_spend">***</string>
    <string name="card_home_bookkeeping_statistics_spend_title">花费</string>
    <string name="card_home_bookkeeping_statistics_remaining">***</string>
    <string name="card_home_bookkeeping_statistics_remaining_title">余额</string>
    <string name="card_home_bookkeeping_statistics_days">***</string>
    <string name="card_home_bookkeeping_statistics_days_title">已用时间</string>
    <string name="card_home_task_counter_statistics_title">今日百日计数器完成状态</string>
    <string name="card_home_plan_counter_statistics_today">00/100</string>
    <string name="card_home_suggest_task_title">建议优先日程</string>
    <string name="card_home_liveline_title">精力曲线</string>
    <string name="card_home_map_title">最近轨迹</string>
    <string name="about_card1_message">Hey, glad to see you!</string>
    <string name="about_email_intent">Feedback:PlanAssistant</string>
    <string name="about_not_found_email">Not found email app</string>
    <string name="about_source_licenses">Open source licenses</string>
    <string name="about_card2_message">If you liked the app, feel free to contact me.</string>
    <string name="about_card2_email">Feedback by E-mail</string>
    <string name="about_card2_git_hub">Source code on GitHub</string>
    <string name="about_card2_address">Beijing, China</string>
    <string name="about_card2_website">PlanAssistant Docs</string>
    <string name="about_card2_source_licenses">Open source licenses</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_navigation">Navigation</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="dialog_close">Close</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog…</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="card_energy_title">精力趋势（点此获取建议）</string>
    <string name="card_energy_physical_title">体能精力</string>
    <string name="card_energy_emotion_title">情感精力</string>
    <string name="card_energy_thinking_title">思维精力</string>
    <string name="card_energy_determination_title">意志精力</string>
    <string name="card_task_urgent_important_title">Ⅰ 重要且紧急</string>
    <string name="card_task_noturgent_important_title">Ⅱ 重要但不紧急</string>
    <string name="card_task_urgent_unimportant_title">Ⅲ 不重要但紧急</string>
    <string name="card_task_noturgent_unimportant_title">Ⅳ 不重要也不紧急</string>
    <string name="settings_location_title">定位设置</string>
    <string name="settings_location_switch">轨迹记录功能</string>
    <string name="settings_location_description">使用先进的定位手段在应用前台记录您的轨迹.</string>
    <string name="settings_location_switch_background">后台轨迹记录</string>
    <string name="settings_location_background_description">在系统后台运行记录服务.</string>
    <string name="settings_location_server">位置服务提供者</string>
    <string name="pref_list_location_query_precision">查询精度限制</string>
    <string name="pref_list_location_query_precision_sedcription">轨迹查询时的精度最大值，设置越大看到的数据精度越低。</string>
    <string name="settings_location_time_interval">定位周期</string>
    <string name="settings_location_time_interval_description">根据您的实际需要设定位置服务循环定位周期，周期越短位置获取越频繁。</string>
    <string name="settings_location_ali_type">定位类型</string>
    <string name="settings_location_tencent_usegps">GPS</string>
    <string name="settings_location_tencent_usegps_description">是否允许软件所集成的腾讯位置服务使用GPS定位，开启获得更高精度，反之软件功耗更低。</string>
    <string name="settings_location_tencent_indoor">室内定位</string>
    <string name="settings_location_indoor_description">是否启用腾讯位置服务室内定位功能，提高室内定位效能。</string>
    <string name="settings_personal_title">个人设置</string>
    <string name="settings_personal_step_target">步数目标</string>
    <string name="settings_personal_start_sleep">开始睡眠</string>
    <string name="settings_personal_start_sleep_summer">开始睡眠时间</string>
    <string name="settings_personal_end_sleep">结束睡眠</string>
    <string name="settings_personal_end_sleep_summer">结束睡眠时间</string>
    <string name="settings_personal_urgent_day">紧急事件判定</string>
    <string name="settings_personal_urgent_day_summer">剩余10天结束判为紧急事件，用于日程分类。</string>
    <string name="settings_system_title">系统设置</string>
    <string name="settings_system_server">服务器节点</string>
    <string name="settings_category_basic">Basic Settings</string>
    <string name="settings_category_advanced">Advanced Settings</string>
    <string name="settings_category_other">Other Settings</string>
    <string name="settings_switch_preference_title">Switch Preference</string>
    <string name="settings_switch_preference_summary">Switch Preference Summary</string>
    <string name="settings_check_box_preference_title">Check Box Preference</string>
    <string name="settings_edit_text_preference_title">Edit Text Preference</string>
    <string name="settings_edit_text_preference_default_value">Material Design 2</string>
    <string name="settings_list_preference_dialog_title">List Preference</string>
    <string name="settings_list_preference_title">List Preference</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>
    <string name="settings_multi_select_list_preference_title">Multi Select List Preference</string>
    <string name="settings_preference_click_title">OnPreferenceClickListener</string>
    <string name="settings_preference_click_to_activity">Click to start an activity</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>
    <string name="card_login_avuser_user">User Name</string>
    <string name="card_login_avuser_passwd">PassWord</string>
    <string name="card_login_avuser_server">Server</string>
    <string name="card_login_button_login">登录</string>
    <string name="card_login_button_signout">注册</string>
    <string name="card_login_button_skip">skip</string>
    <string name="card_login_button_showcode">显示密码</string>
    <string name="card_register_avuser_user">User Name</string>
    <string name="nav_menu_login">登录</string>
    <string name="nav_menu_personinfo">个人信息</string>
    <string name="nav_menu_changepassword">重置密码</string>
    <string name="nav_menu_logout">注销账户</string>
    <string name="dialog_bottom_bookkeeping_title">新增账目</string>
    <string name="dialog_bottom_bookkeeping_name_title">账目名称</string>
    <string name="dialog_bottom_bookkeeping_prince">金额</string>
    <string name="dialog_bottom_bookkeeping_revenue">收支类型</string>
    <string name="dialog_bottom_bookkeeping_type">支出类型</string>
    <string name="dialog_bottom_bookkeeping_description_title">账目描述</string>
    <string name="dialog_bottom_bookkeeping_description_hint">备注</string>
</resources>