<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home_task_today"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_today"
        />
    <item
        android:id="@+id/menu_home_task_today_planning"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_today_planning"
        />
    <item
        android:id="@+id/menu_home_task_late"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_late"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_undo"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_undo"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_do"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_do"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_urgent_importance"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_urgent_importance"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_noturgent_importance"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_noturgent_importance"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_urgent_unimportance"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_urgent_unimportance"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_noturgent_unimportance"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_noturgent_unimportance"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_home_task_all"
        android:orderInCategory="100"
        android:title="@string/menu_home_task_all"
        app:showAsAction="never" />
</menu>
