<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/nav_menu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <group
        android:title="account"
        android:id="@+id/nav_account">
        <menu>

            <item
                android:id="@+id/nav_changepassword"
                android:icon="@drawable/key_change"
                android:title="@string/nav_menu_changepassword" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/information_outline"
                android:title="@string/nav_menu_personinfo" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_menu_logout" />
        </menu>
    </group>

    <group
        android:id="@+id/nav_non_account"
        android:title="account">
        <item
            android:id="@+id/nav_menu_login"
            android:icon="@drawable/login"
            android:title="@string/nav_menu_login"/>
    </group>

</menu>
