<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_location_title">
<!--        <SwitchPreference-->
<!--            android:defaultValue="true"-->
<!--            android:key="pref_location_switch"-->
<!--            android:summary="@string/settings_location_description"-->
<!--            android:icon="@drawable/map_marker"-->
<!--            android:title="@string/settings_location_switch"-->
<!--            android:enabled="false"/>-->

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_location_background_switch"
            android:summary="@string/settings_location_background_description"
            android:icon="@drawable/arrange_send_backward"
            android:title="@string/settings_location_switch_background" />

        <ListPreference
            android:defaultValue="Amap"
            android:dialogTitle="@string/settings_location_server"
            android:entries="@array/settings_list_location_server_title"
            android:entryValues="@array/settings_list_location_server_values"
            android:key="pref_list_location_server"
            android:icon="@drawable/crosshairs_gps"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_location_server" />

        <ListPreference
            android:defaultValue="4000"
            android:dialogTitle="@string/settings_location_time_interval"
            android:entries="@array/settings_list_location_time_interval_title"
            android:entryValues="@array/settings_list_location_time_interval_values"
            android:key="pref_list_location_time"
            android:icon="@drawable/map_clock"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/settings_location_time_interval_description"
            android:title="@string/settings_location_time_interval" />

        <ListPreference
            android:defaultValue="300"
            android:dialogTitle="@string/pref_list_location_query_precision"
            android:entries="@array/settings_list_location_query_precision_title"
            android:entryValues="@array/settings_list_location_query_precision_values"
            android:key="pref_list_location_query_precision"
            android:icon="@drawable/ruler"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_list_location_query_precision_sedcription"
            android:title="@string/pref_list_location_query_precision" />

        <ListPreference
            android:defaultValue="Battery_Saving"
            android:dialogTitle="@string/settings_location_ali_type"
            android:entries="@array/settings_list_location_type_title"
            android:entryValues="@array/settings_list_location_type_values"
            android:key="pref_list_location_ali_type"
            android:icon="@drawable/battery_plus"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_location_ali_type"
            android:enabled="true"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_location_tencent_usegps"
            android:summary="@string/settings_location_tencent_usegps_description"
            android:icon="@drawable/satellite_variant"
            android:title="@string/settings_location_tencent_usegps" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_location_tencent_indoor"
            android:summary="@string/settings_location_indoor_description"
            android:icon="@drawable/door_open"
            android:title="@string/settings_location_tencent_indoor" />



        <!--<CheckBoxPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_check_box"-->
            <!--android:title="@string/settings_check_box_preference_title" />-->

        <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
        <!--<EditTextPreference-->
            <!--android:capitalize="words"-->
            <!--android:defaultValue="@string/settings_edit_text_preference_default_value"-->
            <!--android:inputType="textCapWords"-->
            <!--android:key="pref_text"-->
            <!--android:maxLines="1"-->
            <!--android:selectAllOnFocus="true"-->
            <!--android:singleLine="true"-->
            <!--android:title="@string/settings_edit_text_preference_title" />-->

        <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
        <!--<ListPreference-->
            <!--android:defaultValue="60"-->
            <!--android:dialogTitle="@string/settings_list_preference_dialog_title"-->
            <!--android:entries="@array/settings_list_preference_titles"-->
            <!--android:entryValues="@array/settings_list_preference_values"-->
            <!--android:key="pref_list"-->
            <!--android:negativeButtonText="@null"-->
            <!--android:positiveButtonText="@null"-->
            <!--android:title="@string/settings_list_preference_title" />-->

        <!--<MultiSelectListPreference-->
            <!--android:dialogTitle="@string/settings_multi_select_list_preference_dialog_title"-->
            <!--android:entries="@array/settings_multi_select_list_preference_titles"-->
            <!--android:entryValues="@array/settings_multi_select_list_preference_values"-->
            <!--android:key="pref_multi_select_list"-->
            <!--android:title="@string/settings_multi_select_list_preference_title" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_personal_title">
        <SeekBarPreference
            android:dialogTitle="@string/settings_personal_step_target"
            android:key="pref_list_personal_step_target"
            android:icon="@drawable/bullseye_arrow"
            android:max="20000"
            android:min="2000"
            android:defaultValue="4000"
            android:summary="当前步数日目标：4000"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_personal_step_target" />
        <SeekBarPreference
            android:dialogTitle="@string/settings_personal_urgent_day"
            android:key="pref_seek_personal_urgent_day"
            android:icon="@drawable/clock_fast"
            android:max="100"
            android:min="3"
            android:defaultValue="10"
            android:summary="@string/settings_personal_urgent_day_summer"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_personal_urgent_day" />
        <Preference
            android:title="@string/settings_personal_start_sleep"
            android:summary="@string/settings_personal_start_sleep_summer"
            android:key="pref_personal_start_sleep"
            android:icon="@drawable/bed"/>
        <Preference
            android:title="@string/settings_personal_end_sleep"
            android:summary="@string/settings_personal_end_sleep_summer"
            android:key="pref_personal_end_sleep"
            android:icon="@drawable/human"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_system_title">
        <ListPreference
            android:defaultValue="international"
            android:dialogTitle="@string/settings_system_server"
            android:entries="@array/settings_list_system_server_title"
            android:entryValues="@array/settings_list_system_server_values"
            android:key="pref_list_system_server"
            android:icon="@drawable/server"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/settings_system_server" />
    </PreferenceCategory>
    <!--<PreferenceCategory android:title="@string/settings_category_advanced">-->
        <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per design guidelines. &ndash;&gt;-->
        <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
            <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        <!--</Preference>-->

        <!--&lt;!&ndash; A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. &ndash;&gt;-->
        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:key="pref_notifications_new_message"-->
            <!--android:title="@string/pref_title_new_message_notifications" />-->

        <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
        <!--<SwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:dependency="pref_notifications_new_message"-->
            <!--android:key="pref_notifications_new_message_vibrate"-->
            <!--android:title="@string/pref_title_vibrate" />-->
    <!--</PreferenceCategory>-->


    <!--<PreferenceCategory android:title="@string/settings_category_other">-->
        <!--<Preference-->
            <!--android:key="pref_click"-->
            <!--android:title="@string/settings_preference_click_title" />-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>